compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_parameter_discard_name2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1251
expression: "fn ignore(labelled_discard _ignoreMe: Bool) { 98 }"
snapshot_kind: text
---
----- SOURCE CODE
fn ignore(labelled_discard _ignoreMe: Bool) { 98 }

----- ERROR
error: Invalid discard name
  ┌─ /src/one/two.gleam:1:28
  │
1 │ fn ignore(labelled_discard _ignoreMe: Bool) { 98 }
  │                            ^^^^^^^^^ This is not a valid discard name

Hint: Discard names start with _ and contain a-z, 0-9, or _.
Try: _ignore_me
